# aptu-app

./: .commitlintrc.yml  .editorconfig  .gitleaks.toml  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  GOVERNANCE.md  Justfile  README.md  REUSE.toml  SECURITY.md  deny.toml  renovate.json  rust-toolchain.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug.md  config.yml  documentation.md  feature.md  refactor.yml
.github/instructions/: pr-review.md
.github/workflows/: android-kmp.yml  ci.yml  ios-kmp.yml  issue-triage.yml  pr-review.yml  reuse.yml  scorecard.yml
AptuKMP/: README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
AptuKMP/androidApp/: build.gradle.kts  proguard-rules.pro
AptuKMP/androidApp/src/main/: AndroidManifest.xml
AptuKMP/androidApp/src/main/kotlin/dev/aptu/android/: AptuApplication.kt  MainActivity.kt
AptuKMP/androidApp/src/main/kotlin/dev/aptu/android/ui/: App.kt  AuthScreen.kt  IssueDetailScreen.kt  IssueListScreen.kt  RepoPickerScreen.kt  SettingsScreen.kt
AptuKMP/androidApp/src/main/res/values/: strings.xml  themes.xml
AptuKMP/gradle/: libs.versions.toml
AptuKMP/iosApp/iosApp/: ContentView.swift  iOSApp.swift
AptuKMP/shared/: build.gradle.kts
AptuKMP/shared/src/androidMain/kotlin/dev/aptu/shared/: KeychainProvider.android.kt
AptuKMP/shared/src/commonMain/kotlin/dev/aptu/shared/: IAptuKeychain.kt  KeychainProvider.kt
AptuKMP/shared/src/commonMain/kotlin/dev/aptu/shared/models/: Models.kt
AptuKMP/shared/src/commonMain/kotlin/dev/aptu/shared/viewmodels/: IssueViewModel.kt  RepoViewModel.kt
AptuKMP/shared/src/commonTest/kotlin/dev/aptu/shared/: KeychainProviderTest.kt
AptuKMP/shared/src/iosMain/kotlin/dev/aptu/shared/: KeychainProvider.ios.kt  MainViewController.kt
AptuKMP/shared/src/main/kotlin/dev/aptu/shared/: AptuFfi.kt  AptuKeychain.kt
AptuKMP/shared/src/main/kotlin/dev/aptu/shared/viewmodels/: AuthViewModel.kt
AptuKMP/shared/src/test/kotlin/dev/aptu/shared/: RepoViewModelTest.kt
LICENSES/: Apache-2.0.txt
crates/aptu-ffi/: Cargo.toml  build.rs  uniffi.toml
crates/aptu-ffi/src/: auth.rs  error.rs  keychain.rs  lib.rs  types.rs
docs/: ARCHITECTURE.md  ASSURANCE.md  REPO-STANDARDS.md  ROADMAP.md
