# SPDX-License-Identifier: Apache-2.0
# SPDX-FileCopyrightText: 2026 Aptu Contributors

[workspace]
members = ["crates/aptu-ffi"]
resolver = "3"

[workspace.package]
version = "0.5.1"
edition = "2024"
rust-version = "1.95.0"
authors = ["Hugues Clouâtre"]
license = "Apache-2.0"
repository = "https://github.com/clouatre-labs/aptu-app"

[workspace.dependencies]
# aptu-core: git dependency pinned to the SHA at time of split
# Switch to crates.io once aptu-core is published
aptu-core = { git = "https://github.com/clouatre-labs/aptu", rev = "7d27c77534d3f5185ae2ee578e374b46915f3fee" }
uniffi = { version = "0.29.5" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
tracing = "0.1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
secrecy = "0.10"

[workspace.lints.rust]
unsafe_code = "warn"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
async_yields_async = "allow"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true
opt-level = "z"

[profile.ci]
inherits = "release"
lto = false
codegen-units = 16
