[package]
name = "aptu-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Swift/Kotlin FFI bindings for aptu-core via UniFFI"
[dependencies]
aptu-core = { path = "../aptu-core" }
uniffi = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
secrecy = { workspace = true }

[build-dependencies]
uniffi = { version = "0.31", features = ["build"] }

[lib]
crate-type = ["staticlib", "cdylib", "lib"]
name = "aptu_ffi"
